--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
 	width: 100%;
 	left: 0px;
 	top: 0px;
-	clip: rect(0px,auto,auto,0px);
+	
+}
+.reginab {
+	
+	background-image: url(b.png);
+	background-repeat: no-repeat;
+	background-size:100%;
+	height: 600px;
+	width: 100%;
+	left: 0px;
+	margin-top: 100px;
+	
 }
 </style>
 </head>
@@ -32,6 +43,9 @@
       </tr>
     </table>
   </div>
+  <p>&nbsp;</p>
+  <div class="reginab"></div>
+  <p>&nbsp;</p>
 </div>
 </body>
 </html>
