--- a/contacto.html
+++ b/contacto.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Documento sin título</title>
+<title>La Barbatina</title>
 <style type="text/css">
 .reginaA {
 	font-family: "Times New Roman", Times, serif;
@@ -20,43 +20,13 @@
 }
 .reginab {
 	
-	background-image: url(b.png);
-	background-repeat: no-repeat;
-	background-size:100%;
+
 	height: 600px;
 	width: 100%;
 	left: 0px;
 	margin-top: 100px;
 	
 }
- .video-container {
- width: 100%;
- height: 800px;
- position: relative;
- overflow: hidden;
- box-shadow: 0 0 20px rgba(0,0,0,0.3); /* Sombra opcional */
-margin-top: 10px;
- }
-
- .video-background {
- position: absolute;
- top: 0;
- left: 0;
- width: 100%;
- height: 100%;
- object-fit: cover; /* Asegura que el video cubra todo el contenedor */
- }
-
- /* Opcional: contenido sobre el video */
- .content {
- position: relative;
- z-index: 1;
- color: white;
- text-align: center;
- padding: 20px;
- text-shadow: 1px 1px 3px rgba(0,0,0,0.8);
- }	
- 
  .hover-sombra {
  text-decoration:none;
  color: #2c3e50;
@@ -93,8 +63,6 @@ margin-top: 10px;
  color: #0ff;
  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #0ff, 0 0 30px #0ff;
 }
-
- 
 </style>
 </head>
 
@@ -104,31 +72,27 @@ margin-top: 10px;
     <table width="80%" border="0">
       <tr>
         <td><img src="logoo.png" height="160" /></td>
-        <td><div align="center">INICIO</div></td>
+        <td><div align="center"><a href="index.html" class="hover-sombra">INICIO</a></div></td>
         <td><div align="center"><a href="menu.html" class="hover-sombra">MENÚ</a></div></td>
         <td><div align="center"><a href="promociones.html" class="hover-sombra">PROMOCIONES</a></div></td>
-        <td><div align="center"><a href="contacto.html" class="hover-sombra">CONTACTO</a> <a href="https://www.instagram.com/labarbatina_?igsh=MTlhYmlxNGZoMXFheg=="><img src="IG.png" width="30"  /></a><a href="https://www.facebook.com/share/15spW2h97g/?mibextid=wwXIfr"><img src="FACE.png" width="50"  /></a></div></td>
+        <td><div align="center">CONTACTO <a href="https://www.instagram.com/labarbatina_?igsh=MTlhYmlxNGZoMXFheg=="><img src="IG.png" width="30"  /></a><a href="https://www.facebook.com/share/15spW2h97g/?mibextid=wwXIfr"><img src="FACE.png" width="50"  /></a></div></td>
       </tr>
     </table>
   </div>
   </div>
   <p>&nbsp;</p>
-  <!-- Este es el DIV del video de fondo -->
-<div class="video-container">
- <!-- Reemplaza 'tu-video.mp4' con la ruta de tu video -->
- <video class="video-background" autoplay muted loop>
- <source src="video.mp4" type="video/mp4">
- Tu navegador no soporta videos HTML5.
- </video>
-
- <!-- Contenido opcional sobre el video -->
- <div class="content">
- <h1>Título aquí</h1>
- <p>Texto adicional si lo necesitas</p>
- </div>
-</div>
-<!-- TERMINA EL DIV del video de fondo -->
-  <p>&nbsp;</p>
+  <div class="reginab">
+    <div align="center">
+      <table width="80%" border="0">
+        <tr>
+          <td><p>Callejón Plaza, De Armas #30, Centro, 83600 Heroica Caborca, Son.</p>
+          <p>+526371132828</p></td>
+          <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3430.27958166534!2d-112.1492098!3d30.710539699999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86d315af45709def%3A0x919effd7292a0c81!2sCasa%20Delia!5e0!3m2!1ses!2smx!4v1746638169992!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+        </tr>
+  </table>
+      
+    </div>
+  </div>
   <p>&nbsp;</p>
 
 </body>
