--- a/promociones.html
+++ b/promociones.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Documento sin título</title>
+<title>La Barbatina</title>
 <style type="text/css">
 .reginaA {
 	font-family: "Times New Roman", Times, serif;
@@ -29,34 +29,27 @@
 	margin-top: 100px;
 	
 }
- .video-container {
- width: 100%;
- height: 800px;
- position: relative;
- overflow: hidden;
- box-shadow: 0 0 20px rgba(0,0,0,0.3); /* Sombra opcional */
-margin-top: 10px;
- }
+.reginac {
+	height: 600px;
+	width: 100%;
+	left: 0px;
+	margin-top: 200px;
+	
+}
+imagen-brillante img {
+border-radius: 10px;
+box-shadow: 0 4px 8px rgba(0, 0, 2, 0.2);
+object-fit: cover;
+transition: all 0.5s ease;
+}
 
- .video-background {
- position: absolute;
- top: 0;
- left: 0;
- width: 100%;
- height: 100%;
- object-fit: cover; /* Asegura que el video cubra todo el contenedor */
- }
-
- /* Opcional: contenido sobre el video */
- .content {
- position: relative;
- z-index: 1;
- color: white;
- text-align: center;
- padding: 20px;
- text-shadow: 1px 1px 3px rgba(0,0,0,0.8);
- }	
- 
+.imagen-brillante:hover img {
+filter: brightness(1.3) drop-shadow(0 0 5px rgba(255, 165, 0, 0.8));
+transform: scale(1.02);
+}
+body {
+	background-color: #FFF;
+}
  .hover-sombra {
  text-decoration:none;
  color: #2c3e50;
@@ -93,8 +86,6 @@ margin-top: 10px;
  color: #0ff;
  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #0ff, 0 0 30px #0ff;
 }
-
- 
 </style>
 </head>
 
@@ -104,31 +95,24 @@ margin-top: 10px;
     <table width="80%" border="0">
       <tr>
         <td><img src="logoo.png" height="160" /></td>
-        <td><div align="center">INICIO</div></td>
+        <td><div align="center"><a href="index.html" class="hover-sombra">INICIO</a></div></td>
         <td><div align="center"><a href="menu.html" class="hover-sombra">MENÚ</a></div></td>
-        <td><div align="center"><a href="promociones.html" class="hover-sombra">PROMOCIONES</a></div></td>
+        <td><div align="center">PROMOCIONES</div></td>
         <td><div align="center"><a href="contacto.html" class="hover-sombra">CONTACTO</a> <a href="https://www.instagram.com/labarbatina_?igsh=MTlhYmlxNGZoMXFheg=="><img src="IG.png" width="30"  /></a><a href="https://www.facebook.com/share/15spW2h97g/?mibextid=wwXIfr"><img src="FACE.png" width="50"  /></a></div></td>
       </tr>
     </table>
   </div>
   </div>
   <p>&nbsp;</p>
-  <!-- Este es el DIV del video de fondo -->
-<div class="video-container">
- <!-- Reemplaza 'tu-video.mp4' con la ruta de tu video -->
- <video class="video-background" autoplay muted loop>
- <source src="video.mp4" type="video/mp4">
- Tu navegador no soporta videos HTML5.
- </video>
-
- <!-- Contenido opcional sobre el video -->
- <div class="content">
- <h1>Título aquí</h1>
- <p>Texto adicional si lo necesitas</p>
- </div>
-</div>
-<!-- TERMINA EL DIV del video de fondo -->
-  <p>&nbsp;</p>
+  <div class="reginac" align="center">
+    <table width="100%" border="0">
+      <tr>
+        <td class="imagen-brillante"><img src="PROMO1.jpg"  height="600" /></td>
+        <td class="imagen-brillante"><div align="center"><img src="PROMO2.jpg"  height="600" /></div></td>
+        <td class="imagen-brillante"><img src="PROMO3.jpg"  height="600" /></td>
+      </tr>
+      </table>
+  </div>
   <p>&nbsp;</p>
 
 </body>
